--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -127,7 +127,7 @@ config SPARSEMEM_VMEMMAP
 config HAVE_MEMBLOCK_PHYS_MAP
 	bool
 
-config HAVE_GENERIC_GUP
+config HAVE_FAST_GUP
 	bool
 
 config ARCH_DISCARD_MEMBLOCK
