--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -758,3 +758,13 @@ config ARCH_HAS_PTE_SPECIAL
 
 config MAPPING_DIRTY_HELPERS
         bool
+
+#
+# Some architectures require a special hugepage directory format that is
+# required to support multiple hugepage sizes. For example a4fe3ce76
+# "powerpc/mm: Allow more flexible layouts for hugepage pagetables"
+# introduced it on powerpc.  This allows for a more flexible hugepage
+# pagetable layouts.
+#
+config ARCH_HAS_HUGEPD
+	bool
